added Swagger, handle errors
